fixed password reset alignment

--- a/src/assets/scss/pages/login.scss
+++ b/src/assets/scss/pages/login.scss
@@ -190,9 +190,11 @@
   }
   .forgotPassWrapper {
     padding: 40px 80px;
+
     @include mediaQueries(mobile) {
       padding: 0;
     }
+    
     .input-wrapper {
         label {
             margin-left: 15px;
@@ -235,24 +237,29 @@
       margin-bottom: 32px;
     }
     .emailSubmitWrapper {
-      .continueButton {
-        background-color: #054FF0;
-        height: 45px;
-        border-radius: 40px;
-        padding: 12px 16px 12px 16px;
-        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 21px;
-        letter-spacing: 0em;
-        text-align: center;
-        color: #FFFFFF;
-        &:hover {
-          opacity: 0.8;
-          cursor: pointer;
+        .continueButton {
+            background-color: #054FF0;
+            height: 45px;
+            border-radius: 40px;
+            padding: 12px 16px 12px 16px;
+            border: none;
+
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 21px;
+            letter-spacing: 0em;
+            text-align: center;
+            color: #FFFFFF;
+
+            &:hover {
+                opacity: 0.8;
+                cursor: pointer;
+            }
         }
-      }
     }
   }
 }
